tests/ui/consts/const-err-enum-discriminant.64bit.stderr
error[E0080]: reading memory at ALLOC0[0x0..0x8], but memory is uninitialized at [0x0..0x8], and this operation requires initialized memory
  --> $DIR/const-err-enum-discriminant.rs:10:21
   |
LL |     Boo = [unsafe { Foo { b: () }.a }; 4][3],
   |                     ^^^^^^^^^^^^^^^ evaluation of `Bar::Boo::{constant#0}` failed here
   |
   = note: the raw bytes of the constant (size: 8, align: 8) {
               __ __ __ __ __ __ __ __                         │ ░░░░░░░░
           }

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
